@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.888 2009-04-24 08:07:03 tt Exp $
+# $Id: CHANGES,v 1.889 2009-04-27 08:07:35 tr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.0 beta2 (2009/??/??)
+ - (2009/04/27) Fixed bug# 3802 - Errormessage: "Got no EncodeObject!" if
+    using rpc.pl (SOAP).
  - (2009/04/24) Fixed bug# 3691 - CustomerUser::LDAP does support GroupDN now.
  - (2009/04/23) Fixed bug# 3799 - The UPGRADING refrences a file not included
     in the source code.
